<resources>
    <string name="app_name">Agenda Widget</string>
    <string name="save">Save</string>>
    <string name="help">Help</string>
    <string name="backup">Backup Settings</string>
    <string name="restore">Restore Settings</string>
    <string name="add">Add new</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Widget settings</string>
    <string name="tab_general">General</string>
    <string name="tab_calendar">Calendar</string>
    <string name="tab_tasks">Tasks</string>
    <string name="every">Every</string>
    <string name="next">Next</string>
    <string name="dialog_ok">OK</string>
    <string name="number_of_lines">Number of lines</string>
    <string name="unlimited">No limit</string>
    <string name="location">location</string>
    <string name="notes">notes</string>
    <string name="priority">priority</string>
    <string name="all_day">all day</string>
    <string name="add_new">Add New</string>
    <string name="add_calendar_event">Calendar Event</string>
    <string name="add_task">Task</string>
    <string name="select_calendars">Please grant the permission to read calendar events and select some calendars to display!</string>

    <!-- General Settings -->
    <string name="appearance_category">Appearance</string>
    <string name="background_color_prop">Background Color</string>
    <string name="background_color_desc">The widget\'s background color.</string>
    <string name="drop_shadow_prop">Drop Shadow</string>
    <string name="drop_shadow_desc">Drop a shadow around the widget. It disables widget\'s transparency.</string>
    <string name="header_color_prop">Header Color</string>
    <string name="header_color_desc">The color of the header\'s date.</string>
    <string name="control_color_prop">Controls Color</string>
    <string name="control_color_desc">The color of the widget\'s control buttons.</string>
    <string name="date_title_color_prop">Title and Date Color</string>
    <string name="date_title_color_desc">The color of the events\' title and date (1st line).</string>
    <string name="location_notes_color_prop">Location and Notes Color</string>
    <string name="location_notes_color_desc">The color of the events\' location and notes (2nd and 3rd lines).</string>
    <string name="today_bold_prop">Today\'s Events Bold</string>
    <string name="today_bold_desc">Use bold font for today\'s events title and date (1st line).</string>
    <string name="today_date_title_color_prop">Today\'s Title and Date Color</string>
    <string name="today_date_title_color_desc">The color of the today\'s events title and date (1st line).</string>
    <string name="today_location_notes_color_prop">Today\'s Location and Notes Color</string>
    <string name="today_location_notes_color_desc">The color of the today\'s events location and notes (2nd and 3rd
        lines).
    </string>
    <string name="datettime_format">Date and Time Format</string>
    <string name="long_date_prop">Long Date</string>
    <string name="short_date_prop">Short Date</string>
    <string name="time_prop">Time</string>

    <!-- Calendar Settings -->
    <string name="calendars_category">Calendars</string>
    <string name="selected_calendars_prop">Select Calendars</string>
    <string name="selected_calendars_desc">Selects the calendars that appear in the widget.</string>

    <string name="calendar_options_category">Calendar Options</string>
    <string name="search_period_prop">Search Period</string>
    <string name="group_by_date_prop">Group by Date</string>
    <string name="group_by_date_desc">Groups events by date, showing a common date header.</string>
    <string name="repeat_multiday_events_prop">Repeat Multiple Day Events</string>
    <string name="repeat_multiday_events_desc">If selected multiple day events are repeatedly shown in each day.
        Otherwise they are shown only in their first day.
    </string>

    <string name="layout_options_category">Layout Options</string>
    <string name="show_all_day_prop">Indicate All Day Events</string>
    <string name="show_all_day_desc">When selected, the \"(all day)\" literal will be added next to an event, to
        explicitly indicate that it is an all day event.
    </string>
    <string name="show_location_prop">Show Event\'s Location</string>
    <string name="show_location_desc">Show event\'s location on a separate line.</string>
    <string name="show_notes_prop">Show Event\'s Notes</string>
    <string name="show_notes_desc">Show event\'s notes on a separate line.</string>
    <string name="notes_number_of_lines_prop">Event\'s Notes Number of Lines</string>
    <string name="notes_number_of_lines_desc">Maximum number of lines to use for showing the event\'s notes.</string>


    <!-- Task Settings -->
    <string name="tasks_category">Tasks</string>
    <string name="task_provider_prop">Task Provider</string>
    <string name="task_provider_desc">Select the tasks provider.</string>
    <string name="selected_tasks_prop">Select Tasks</string>
    <string name="selected_tasks_desc">Selects the tasks that appear in the widget.</string>
    <string name="task_options_category">Task Options</string>
    <string name="show_overdue_tasks_prop">Show Overdue Tasks</string>
    <string name="show_overdue_tasks_desc">When selected, it will treat overdue tasks as today\'s.</string>
    <string name="show_future_tasks_prop">Show Future Tasks</string>
    <string name="show_future_tasks_desc">Shows tasks that have not started yet.</string>
    <string name="use_calendar_search_period_prop">Use Calendar\'s Search Period</string>
    <string name="use_calendar_search_period_desc">When selected, it will not display tasks with both start and due
        dates after the search period.
    </string>
    <string name="use_calendar_layout_options_prop">Use Calendar\'s Layout Options</string>
    <string name="use_calendar_layout_options_desc">Use same layout options with calendar events when applicable.
    </string>

    <!-- datetime format dialog -->
    <string name="full_format">Full</string>
    <string name="long_format">Long</string>
    <string name="medium_format">Medium</string>
    <string name="short_format">Short</string>
    <string name="custom_format">Custom</string>
    <string name="custom_format_hint">Custom format string</string>
    <string name="custom_date_format_help">&lt;font color="#308E03"&gt;&lt;b&gt;Year Format:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;yy&lt;/b&gt;&lt;/i&gt;:
        2 digit number, &lt;i&gt;&lt;b&gt;yyyy&lt;/b&gt;&lt;/i&gt;: 4 digit number&lt;br /&gt;&lt;font color="#308E03"&gt;&lt;b&gt;Month
        Format:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;M&lt;/b&gt;&lt;/i&gt;: number, &lt;i&gt;&lt;b&gt;MM&lt;/b&gt;&lt;/i&gt;:
        number with leading zero, &lt;i&gt;&lt;b&gt;MMM&lt;/b&gt;&lt;/i&gt;: abbreviated name (e.g. Oct), &lt;i&gt;&lt;b&gt;MMMM&lt;/b&gt;&lt;/i&gt;:
        full name (e.g. October)&lt;br /&gt;&lt;font color="#308E03"&gt;&lt;b&gt;Day Format:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;d&lt;/b&gt;&lt;/i&gt;:
        Day in month, &lt;i&gt;&lt;b&gt;dd&lt;/b&gt;&lt;/i&gt;: Day in month with leading zero&lt;br /&gt;&lt;font
        color="#308E03"&gt;&lt;b&gt;Weekday Format:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;E&lt;/b&gt;&lt;/i&gt;:
        abbreviated name (e.g. Sun), &lt;i&gt;&lt;b&gt;EEEE&lt;/b&gt;&lt;/i&gt;: full name (e.g. Sunday)&lt;br /&gt;
    </string>
    <string name="custom_time_format_help">&lt;font color="#308E03"&gt;&lt;b&gt;Hour Format:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;H&lt;/b&gt;&lt;/i&gt;:
        24 hour, &lt;i&gt;&lt;b&gt;HH&lt;/b&gt;&lt;/i&gt;: 24 hour with leading zero, &lt;i&gt;&lt;b&gt;h&lt;/b&gt;&lt;/i&gt;:
        12 hour, &lt;i&gt;&lt;b&gt;hh&lt;/b&gt;&lt;/i&gt;: 12 hour with leading zero&lt;br /&gt;&lt;font color="#308E03"&gt;&lt;b&gt;Minute
        Format:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;mm&lt;/b&gt;&lt;/i&gt;: Minutes&lt;br /&gt;&lt;font
        color="#308E03"&gt;&lt;b&gt;AM/PM Indicator:&lt;/b&gt;&lt;/font&gt; &lt;i&gt;&lt;b&gt;a&lt;/b&gt;&lt;/i&gt;:
        show indicator
    </string>
    <string name="custom_format_error">Format is invalid</string>
    <string name="backup_created">Settings successfully saved!</string>
    <string name="backup_restored">Settings successfully restored!</string>
    <string name="cannot_write_to_storage">Cannot write to External Storage.</string>
    <string name="permission_to_external_storage_denied">Permission to external storage denied.</string>
    <string name="backup_success">Backup Success</string>
    <string name="restore_success">Restore Success</string>
    <string name="backup_failed">Backup Failed</string>
    <string name="restore_failed">Restore Failed</string>
    <string name="error_occurred">An error has occurred:</string>
    <string name="privacy">Privacy Statement</string>


</resources>
