<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_save"
          android:orderInCategory="50"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_save"
          android:title="@string/save"/>
    <item android:id="@+id/action_help"
          android:orderInCategory="100"
          app:showAsAction="ifRoom"
          android:icon="@drawable/ic_help"
          android:title="@string/help"/>
    <item android:id="@+id/action_backup"
          android:orderInCategory="200"
          app:showAsAction="never"
          android:title="@string/backup"/>
    <item android:id="@+id/action_restore"
          android:orderInCategory="200"
          app:showAsAction="never"
          android:title="@string/restore"/>
    <item android:id="@+id/action_privacy"
            android:orderInCategory="200"
            app:showAsAction="never"
            android:title="@string/privacy"/>


</menu>

