<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_margin="16dp">

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="start"
                  android:orientation="horizontal">

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:maxLines="1"
                  android:layout_marginStart="6dp"
                  android:labelFor="@+id/editNumberOfLines"
                  android:text="@string/number_of_lines"/>
        <EditText android:id="@+id/editNumberOfLines"
                  android:layout_width="40dp"
                  android:layout_marginStart="5dp"
                  android:gravity="end"
                  android:selectAllOnFocus="true"
                  android:inputType="number"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
    <CheckBox android:id="@+id/chkUnlimited"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingStart="5dp"
              android:paddingEnd="5dp"
              android:checked="false"
              android:text="@string/unlimited"/>


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <android.support.v4.widget.Space android:layout_width="0dp"
                                         android:layout_height="wrap_content"
                                         android:layout_weight="1"/>
        <TextView android:id="@+id/tvDialogOk"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="end"
                  android:textStyle="bold"
                  android:textColor="@color/colorPrimary"
                  android:textSize="18sp"
                  android:layout_marginEnd="4dp"
                  android:focusable="true"
                  android:layout_marginBottom="10dp"
                  android:text="@string/dialog_ok"/>
    </LinearLayout>
</LinearLayout>
