<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/widgetLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/widget_margin">
    <RelativeLayout android:id="@+id/layoutHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <TextView android:id="@+id/tvCurrentDate"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_alignParentStart="true"
                  android:textSize="@dimen/widget_header"
                  android:textStyle="bold"
                  android:textColor="#ffffff"
                  android:text="Sunday, October 8, 2017"/>
        <ImageButton android:id="@+id/imgSettings"
                     android:layout_width="@dimen/widget_button"
                     android:layout_height="@dimen/widget_button"
                     android:layout_alignParentEnd="true"
                     android:layout_marginStart="@dimen/widget_button_margin"
                     android:contentDescription="@string/settings"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_settings"
                     android:scaleType="fitCenter"/>
        <ImageButton android:id="@+id/imgRefresh"
                     android:layout_width="@dimen/widget_button"
                     android:layout_height="@dimen/widget_button"
                     android:layout_marginStart="@dimen/widget_button_margin"
                     android:layout_toStartOf="@id/imgSettings"
                     android:contentDescription="@string/refresh"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_refresh"
                     android:scaleType="fitCenter"/>
        <ImageButton android:id="@+id/imgAdd"
                     android:layout_width="@dimen/widget_button"
                     android:layout_height="@dimen/widget_button"
                     android:layout_toStartOf="@id/imgRefresh"
                     android:contentDescription="@string/add"
                     android:background="@android:color/transparent"
                     android:src="@drawable/ic_add"
                     android:scaleType="fitCenter"/>
    </RelativeLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:layout_below="@id/layoutHeader"
              android:text="Event List"
              android:textColor="#ffffff"/>
</RelativeLayout>