<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_margin="10dp"
              android:layout_height="wrap_content">

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/colorPrimary"
              android:textSize="16sp"
              android:textStyle="bold"
              android:layout_marginStart="5dp"
              android:layout_marginEnd="5dp"
              android:layout_marginBottom="10dp"
              android:text="@string/add_new"/>
    <LinearLayout android:id="@+id/add_calendar_event"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:layout_margin="5dp"
                  android:layout_width="match_parent"
                  android:clickable="true"
                  android:background="?android:attr/selectableItemBackground"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:duplicateParentState="true"
                   android:background="@android:color/transparent"
                   android:contentDescription="@string/add_calendar_event"
                   android:clickable="false"
                   android:focusable="false"
                   android:focusableInTouchMode="false"
                   android:src="@drawable/ic_calendar_event"
                   android:scaleType="fitCenter"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:layout_marginStart="5dp"
                  android:textSize="16sp"
                  android:clickable="false"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:textColor="@color/colorText"
        android:text="@string/add_calendar_event"/>
    </LinearLayout>
    <LinearLayout android:id="@+id/add_task"
                  android:orientation="horizontal"
                  android:gravity="center_vertical"
                  android:layout_margin="5dp"
                  android:clickable="true"
                  android:background="?android:attr/selectableItemBackground"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <ImageView android:layout_width="24dp"
                   android:layout_height="24dp"
                   android:duplicateParentState="true"
                   android:background="@android:color/transparent"
                   android:contentDescription="@string/add_task"
                   android:src="@drawable/ic_task_event"
                   android:clickable="false"
                   android:focusable="false"
                   android:focusableInTouchMode="false"
                   android:scaleType="fitCenter"/>
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:duplicateParentState="true"
                  android:layout_marginStart="5dp"
                  android:textColor="@color/colorText"
                  android:textSize="16sp"
                  android:clickable="false"
                  android:focusable="false"
                  android:focusableInTouchMode="false"
                  android:text="@string/add_task"/>
    </LinearLayout>
</LinearLayout>
